# ubervvald

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: torch-multilclass.ipynb
ubervvald/: DNAS.py  __init__.py  _utils.py  quant.py
