[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ubervvald"]
exclude = ["examples*"]

[tool.setuptools.dynamic]
version = {attr = "ubervvald.__version__"}

[project]
name = "ubervvald"
dynamic = ["version"]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "tqdm>=4.66.5",
    "torcheval>=0.0.7",
    "numpy>=1.24.3",
    "pandas>=2.2.2",
    "plinio@git+https://github.com/eml-eda/plinio.git@main#egg=plinio",
                                # put commit hash here^^^^
    # "gidgethub[httpx]>4.0.0",
    # "django>2.1; os_name != 'nt'",
    # "django>2.0; os_name == 'nt'",
]
requires-python = ">=3.8"
authors = [
  {name = "David Nevezi-Strango", email = "david.nevezi-strango@continental-corporation.com"}
]
maintainers = [
  {name = "David Nevezi-Strango", email = "david.nevezi-strango@continental-corporation.com"}
]
description = "Python library which offers tools for simple optimization methods such as NAS and Static Quantization"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Differentiable Neural Architecture Search :: PLiNIO",
    "Quantization-aware training :: PyTorch",
    "Static Quantization :: ONNX",
    "Programming Language :: Python",
    # "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github-vni.geo.conti.de/uie64426/qNAS.git"
"Bug Tracker" = "https://github-vni.geo.conti.de/uie64426/qNAS/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
